@@ -1,5 +1,6 @@
 package com.hp.dsg.stratus.rest.entities;
 
+
 import com.hp.dsg.rest.ContentType;
 import com.hp.dsg.stratus.entities.Entity;
 import com.hp.dsg.stratus.rest.Mpp;
@@ -7,28 +8,29 @@ import com.hp.dsg.stratus.rest.Mpp;
 /**
  * Created by panuska on 6.1.15.
  */
-public class MppSubscriptionHandler extends CsaEntityHandler {
+public class MppInstanceHandler extends CsaEntityHandler {
 
-    public MppSubscriptionHandler() {
+    public MppInstanceHandler() {
         super();
-        this.context = "mpp-subscription";
+        this.context = "mpp-instance";
     }
 
     @Override
     protected String getListJson() {
-        return client.doPost(Mpp.REST_API + "/mpp/mpp-subscription/filter", "{}").getResponse();
+        return client.doPost(Mpp.REST_API+"/mpp/mpp-instance/filter", "{}").getResponse();
     }
 
     @Override
     protected Entity newEntity(String json) {
-        return new MppSubscription(json);
+        return new MppInstance(json);
     }
 
     @Override
     public Entity loadDetails(Entity entity) {
-        String subscriptionId = entity.getId();
+        String instanceId = entity.getProperty("id");
+        String catalogId = entity.getProperty("catalogId");
 
-        String json = client.doGet(Mpp.REST_API+"/mpp/mpp-subscription/"+subscriptionId, ContentType.JSON_JSON).getResponse();
+        String json = client.doGet(Mpp.REST_API+"/mpp/mpp-instance/"+instanceId+"?catalogId="+catalogId, ContentType.JSON_JSON).getResponse();
         entity.init(json); //todo mark somewhere details have been loaded
         return entity;
     }
